<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:text="@string/title"
        style="@style/styleTitle"
        android:gravity="center"/>
    
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/ed_find"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:maxLength="8"
            android:singleLine="true"
            android:hint="@string/waitText"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp" />

        <ImageButton
            android:id="@+id/IBT1"
            android:layout_width="45dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/ed_find"
            android:layout_marginTop="3dp"
            android:background="#00000000"
            android:src="@drawable/search" />

        <ImageButton
            android:id="@+id/bt_exit"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:src="@drawable/exit"/>

        <TextView
            android:id="@+id/textV"
            style="@style/styleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/exit" />
        
        <TextView
            android:id="@+id/tt1"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ed_find"
            android:layout_marginLeft="10dp" /> 
            
        <TextView
            android:id="@+id/textView1"
            style="@style/styleTitleSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tt1"
            android:layout_marginLeft="10dp"
            android:text="@string/titlePerson" /> 
            
    </RelativeLayout> 
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">
              
        <TextView
	            android:layout_width="10dp"
	            android:layout_height="wrap_content"/>
        
       	<LinearLayout
		        android:id="@+id/linearLayout1"
		        android:layout_width="380dp"
		        android:layout_height="20dp"
		        android:background="@drawable/titlebk"
		        android:orientation="horizontal">
	    <TextView
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:textColor="@color/listBackColor"
	            android:text="@string/date"/>
    	<TextView
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:textColor="@color/listBackColor"
	            android:text="@string/name"/>
    	<TextView
	            android:layout_width="60dp"
	            android:layout_height="wrap_content"/>    	
    	<TextView
	            android:layout_width="50dp"
	            android:layout_height="wrap_content"
	            android:textColor="@color/listBackColor"
	            android:gravity="center"
	            android:text="@string/age"/>
       	<TextView
	            android:layout_width="50dp"
	            android:layout_height="wrap_content"
	            android:textColor="@color/listBackColor"
	            android:gravity="center"
	            android:text="@string/sex"/> 
    	</LinearLayout>
	</LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
       
        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>
        
  		<ListView
  		    android:id="@+id/lt1"
  		    android:layout_width="380dp"
  		    android:layout_height="180dp"
  		    android:cacheColorHint="@android:color/transparent"
  		    android:listSelector="@android:color/transparent"/>
  		
    </LinearLayout>
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>
        
  		<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/styleTitleSub"
            android:text="@string/titleKind"/>
  		
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    	<TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

  		<ListView
  		    android:id="@+id/lt2"
  		    android:layout_width="380dp"
  		    android:layout_height="145dp"
  		    android:cacheColorHint="@android:color/transparent"
  		    android:listSelector="@android:color/transparent"/>

    </LinearLayout>

</LinearLayout>